Se agregó modelo Publicación y botón para ver publicaciones desde inicio

--- a/tienda/templates/tienda/inicio.html
+++ b/tienda/templates/tienda/inicio.html
@@ -17,6 +17,7 @@
         <a href="{% url 'crear_producto' %}" class="btn btn-outline-success btn-lg">Registrar Producto</a>
         <a href="{% url 'crear_empleado' %}" class="btn btn-outline-warning btn-lg">Registrar Empleado</a>
         <a href="{% url 'buscar_producto' %}" class="btn btn-outline-info btn-lg">Buscar Producto</a>
+        <a href="{% url 'listar_publicaciones' %}" class="btn btn-primary mt-3">Ver publicaciones</a>
     </div>
 </div>
 
