--- a/tienda/templates/tienda/padre.html
+++ b/tienda/templates/tienda/padre.html
@@ -23,6 +23,7 @@
                     <li class="nav-item"><a class="nav-link" href="{% url 'crear_cliente' %}">Clientes</a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'crear_producto' %}">Productos</a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'crear_empleado' %}">Empleados</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'listar_publicaciones' %}">Publicaciones</a></li>
                 </ul>
             </div>
         </div>
