--- a/tienda/templates/tienda/padre.html
+++ b/tienda/templates/tienda/padre.html
@@ -9,7 +9,7 @@
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Tu CSS personalizado (si lo agregás en static/css/) -->
+    <!-- Tu CSS personalizado -->
     <link rel="stylesheet" href="{% static 'css/estilos.css' %}">
 </head>
 <body style="background-color: #f0f8ff;">
@@ -25,14 +25,31 @@
                     <li class="nav-item"><a class="nav-link" href="{% url 'crear_empleado' %}">Empleados</a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'listar_publicaciones' %}">Publicaciones</a></li>
                 </ul>
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    {% if user.is_authenticated %}
+                        <li class="nav-item"><a class="nav-link" href="{% url 'perfil' %}">Perfil</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">Cerrar sesión</a></li>
+                    {% else %}
+                        <li class="nav-item"><a class="nav-link" href="{% url 'login' %}">Iniciar sesión</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'signup' %}">Registrarse</a></li>
+                    {% endif %}
+                </ul>
             </div>
         </div>
     </nav>
 
+    <!-- Mensajes -->
+    {% if messages %}
+    <div class="container mt-3">
+        {% for message in messages %}
+        <div class="alert alert-{{ message.tags }}">{{ message }}</div>
+        {% endfor %}
+    </div>
+    {% endif %}
+
     <!-- Contenido principal -->
     <div class="container mt-4">
         {% block content %}
-        
         {% endblock %}
     </div>
 
