--- a/tienda/templates/tienda/padre.html
+++ b/tienda/templates/tienda/padre.html
@@ -31,7 +31,7 @@
                         <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">Cerrar sesión</a></li>
                     {% else %}
                         <li class="nav-item"><a class="nav-link" href="{% url 'login' %}">Iniciar sesión</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'signup' %}">Registrarse</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'registro' %}">Registrarse</a></li>
                     {% endif %}
                 </ul>
             </div>
