--- a/tienda/templates/tienda/registro.html
+++ b/tienda/templates/tienda/registro.html
@@ -3,8 +3,8 @@
 
 {% block content %}
 <div class="container mt-4">
-    <h2>Registro de usuario</h2>
-    <form method="post" novalidate>
+    <h2>Registrarse</h2>
+    <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit" class="btn btn-primary">Registrarse</button>
