Se agrega formulario de contacto

--- a/tienda/templates/tienda/padre.html
+++ b/tienda/templates/tienda/padre.html
@@ -24,6 +24,8 @@
                     <li class="nav-item"><a class="nav-link" href="{% url 'crear_producto' %}">Productos</a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'crear_empleado' %}">Empleados</a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'listar_publicaciones' %}">Publicaciones</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'contacto' %}">Contacto</a></li>
+                    
                 </ul>
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     {% if user.is_authenticated %}
