--- a/tienda/templates/tienda/padre.html
+++ b/tienda/templates/tienda/padre.html
@@ -25,7 +25,7 @@
                     <li class="nav-item"><a class="nav-link" href="{% url 'crear_empleado' %}">Empleados</a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'listar_publicaciones' %}">Publicaciones</a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'contacto' %}">Contacto</a></li>
-                    
+                    <li class="nav-item"><a class="nav-link" href="{% url 'about' %}">Acerca de mí</a></li>
                 </ul>
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     {% if user.is_authenticated %}
@@ -57,7 +57,7 @@
 
     <!-- Footer -->
     <footer class="bg-light text-center mt-5 py-3">
-        <p class="mb-0 text-muted">&copy; 2025 - Tu Tienda Django</p>
+        <p class="mb-0 text-muted">&copy; 2025 - TechShop</p>
     </footer>
 
     <!-- Bootstrap JS -->
