--- a/tienda/templates/tienda/publicaciones.html
+++ b/tienda/templates/tienda/publicaciones.html
@@ -5,6 +5,11 @@
 <div class="container mt-4">
     <h2 class="mb-4">Publicaciones</h2>
 
+    {% if user.is_authenticated %}
+        <a href="{% url 'crear_publicacion' %}" class="btn btn-success mb-4">Crear publicación</a>
+    {% endif %}
+
+
     {% if publicaciones %}
         <div class="row">
             {% for publicacion in publicaciones %}
