--- a/tienda/templates/tienda/padre.html
+++ b/tienda/templates/tienda/padre.html
@@ -20,9 +20,8 @@
             <a class="navbar-brand" href="{% url 'inicio' %}">Mi Tienda</a>
             <div class="collapse navbar-collapse">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item"><a class="nav-link" href="{% url 'crear_cliente' %}">Clientes</a></li>
-                    <li class="nav-item"><a class="nav-link" href="{% url 'crear_producto' %}">Productos</a></li>
-                    <li class="nav-item"><a class="nav-link" href="{% url 'crear_empleado' %}">Empleados</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'registros' %}">Registros</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'buscar_producto' %}">Buscar Productos</a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'listar_publicaciones' %}">Publicaciones</a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'contacto' %}">Contacto</a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'about' %}">Acerca de mí</a></li>
